@@ -1,60 +1,96 @@
 package com.sprint.mission.discodeit.repository;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import com.sprint.mission.discodeit.entity.Channel;
 import com.sprint.mission.discodeit.entity.ChannelType;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
-import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
+import org.springframework.boot.test.autoconfigure.orm.jpa.TestEntityManager;
 import org.springframework.data.jpa.repository.config.EnableJpaAuditing;
 import org.springframework.test.context.ActiveProfiles;
 
-
+/**
+ * ChannelRepository 슬라이스 테스트
+ */
 @DataJpaTest
-@ActiveProfiles("test")
 @EnableJpaAuditing
-public class ChannelRepositoryTest {
+@ActiveProfiles("test")
+class ChannelRepositoryTest {
 
-    @Autowired
-    ChannelRepository channelRepository;
+  @Autowired
+  private ChannelRepository channelRepository;
 
-    public Channel channel1;
-    public Channel channel2;
-    public Channel channel3;
+  @Autowired
+  private TestEntityManager entityManager;
 
-    @BeforeEach
-    void setUp() {
-        channel1 = channelRepository.save(new Channel(ChannelType.PUBLIC, "채널1","채널1입니다"));
-        channel2 = channelRepository.save(new Channel(ChannelType.PRIVATE, "채널2","채널2입니다"));
-        channel3 = channelRepository.save(new Channel(ChannelType.PUBLIC, "채널3","채널3입니다"));
-    }
+  /**
+   * TestFixture: 채널 생성용 테스트 픽스처
+   */
+  private Channel createTestChannel(ChannelType type, String name) {
+    Channel channel = new Channel(type, name, "설명: " + name);
+    return channelRepository.save(channel);
+  }
 
+  @Test
+  @DisplayName("타입이 PUBLIC이거나 ID 목록에 포함된 채널을 모두 조회할 수 있다")
+  void findAllByTypeOrIdIn_ReturnsChannels() {
+    // given
+    Channel publicChannel1 = createTestChannel(ChannelType.PUBLIC, "공개채널1");
+    Channel publicChannel2 = createTestChannel(ChannelType.PUBLIC, "공개채널2");
+    Channel privateChannel1 = createTestChannel(ChannelType.PRIVATE, "비공개채널1");
+    Channel privateChannel2 = createTestChannel(ChannelType.PRIVATE, "비공개채널2");
 
-//    List<Channel> findAllByTypeOrIdIn(ChannelType type, List<UUID> ids);
-    @Test
-    void findAllByTypeOrIdInTest_Public(){
-        List<UUID> ids = List.of(channel1.getId(), channel3.getId()); // 조회할 채널 ID 목록
-        ChannelType type = ChannelType.PUBLIC;            // 조회할 타입
+    channelRepository.saveAll(
+        Arrays.asList(publicChannel1, publicChannel2, privateChannel1, privateChannel2));
 
-        List<Channel> result = channelRepository.findAllByTypeOrIdIn(type, ids);
+    // 영속성 컨텍스트 초기화
+    entityManager.flush();
+    entityManager.clear();
 
-        assertEquals(2, result.size()); // general(type=PUBLIC), dev(type=PUBLIC), id=1,3 포함
+    // when
+    List<UUID> selectedPrivateIds = List.of(privateChannel1.getId());
+    List<Channel> foundChannels = channelRepository.findAllByTypeOrIdIn(ChannelType.PUBLIC,
+        selectedPrivateIds);
 
-    }
-    @Test
-    void findAllByTypeOrIdInTest_Private(){
-        List<UUID> ids = List.of(channel2.getId()); // 조회할 채널 ID 목록
-        ChannelType type = ChannelType.PRIVATE;            // 조회할 타입
+    // then
+    assertThat(foundChannels).hasSize(3); // 공개채널 2개 + 선택된 비공개채널 1개
 
-        List<Channel> result = channelRepository.findAllByTypeOrIdIn(type, ids);
+    // 공개 채널 2개가 모두 포함되어 있는지 확인
+    assertThat(
+        foundChannels.stream().filter(c -> c.getType() == ChannelType.PUBLIC).count()).isEqualTo(2);
 
-        assertEquals(1, result.size()); // general(type=PUBLIC), dev(type=PUBLIC), id=1,3 포함
+    // 선택된 비공개 채널만 포함되어 있는지 확인
+    List<Channel> privateChannels = foundChannels.stream()
+        .filter(c -> c.getType() == ChannelType.PRIVATE)
+        .toList();
+    assertThat(privateChannels).hasSize(1);
+    assertThat(privateChannels.get(0).getId()).isEqualTo(privateChannel1.getId());
+  }
 
-    }
+  @Test
+  @DisplayName("타입이 PUBLIC이 아니고 ID 목록이 비어있으면 비어있는 리스트를 반환한다")
+  void findAllByTypeOrIdIn_EmptyList_ReturnsEmptyList() {
+    // given
+    Channel privateChannel1 = createTestChannel(ChannelType.PRIVATE, "비공개채널1");
+    Channel privateChannel2 = createTestChannel(ChannelType.PRIVATE, "비공개채널2");
 
+    channelRepository.saveAll(Arrays.asList(privateChannel1, privateChannel2));
 
-}
+    // 영속성 컨텍스트 초기화
+    entityManager.flush();
+    entityManager.clear();
+
+    // when
+    List<Channel> foundChannels = channelRepository.findAllByTypeOrIdIn(ChannelType.PUBLIC,
+        List.of());
+
+    // then
+    assertThat(foundChannels).isEmpty();
+  }
+} 
